--- a/Curso Web Moderno com JavaScript COMPLETO + Projetos/webpack/package.json
+++ b/Curso Web Moderno com JavaScript COMPLETO + Projetos/webpack/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
+    "start": "webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
@@ -12,15 +12,18 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "css-loader": "^6.3.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
-    "webpack": "^5.55.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0"
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-dev-server": "^3.1.4"
   }
 }
